--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -18,7 +18,7 @@ package(
 )
 
 load("//build/kleaf:common_kernels.bzl", "aarch64_outs")
-load("//build/kleaf:kernel.bzl", "kernel_build")
+load("//build/kleaf:kernel.bzl", "kernel_build", "kernel_modules_install")
 
 kernel_build(
     name = "slider",
@@ -192,5 +192,34 @@ kernel_build(
     toolchain_version = "r416183b",
     deps = [
         "//prebuilts/misc/linux-x86/libufdt:mkdtimg",
+    ],
+)
+
+kernel_modules_install(
+    name = "slider_modules_install",
+    kernel_build = ":slider",
+    kernel_modules = [
+        "//private/google-modules/display/samsung:samsung.slider",
+        "//private/google-modules/gpu/mali_pixel:mali_pixel.slider",
+        "//private/google-modules/gpu/mali_kbase:mali_kbase.slider",
+        "//private/google-modules/lwis:lwis.slider",
+        "//private/google-modules/edgetpu/drivers/edgetpu:edgetpu.slider",
+        "//private/google-modules/bms:bms.slider",
+        "//private/google-modules/amplifiers/drv2624:drv2624.slider",
+        "//private/google-modules/amplifiers/cs40l25:cs40l25.slider",
+        "//private/google-modules/amplifiers/cs35l41:cs35l41.slider",
+        "//private/google-modules/amplifiers/audiometrics:audiometrics.slider",
+        "//private/google-modules/aoc:aoc.slider",
+        "//private/google-modules/aoc/alsa:alsa.slider",
+        "//private/google-modules/touch/common:common.slider",
+        "//private/google-modules/touch/fts/ftm5:ftm5.slider",
+        "//private/google-modules/touch/sec:sec.slider",
+        "//private/google-modules/power/reset:reset.slider",
+        "//private/google-modules/bluetooth/broadcom:broadcom.slider",
+        "//private/google-modules/nfc:nfc.slider",
+        "//private/google-modules/uwb/kernel:kernel.slider",
+        # "//private/google-modules/wlan/bcmdhd43752:bcmdhd43752.slider",
+        # "//private/google-modules/wlan/bcmdhd4389:bcmdhd4389.slider",
+        # "//private/google-modules/aoc/usb:usb.slider",
     ],
 )
