ANDROID: GKI: Revert "arm64: Drop support for CMDLINE_EXTEND"
This reverts commit cae118b6acc309539b33339e846cbb19187c164c.

Bug: 199354250
Change-Id: I2b1bed90c13cefca1d934b69641699f010936689
Signed-off-by: Will McVicker <willmcvicker@google.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1856,6 +1856,12 @@ config CMDLINE_FROM_BOOTLOADER
 	  the boot loader doesn't provide any, the default kernel command
 	  string provided in CMDLINE will be used.
 
+config CMDLINE_EXTEND
+	bool "Extend bootloader kernel arguments"
+	help
+	  The command-line arguments provided by the boot loader will be
+	  appended to the default kernel command string.
+
 config CMDLINE_FORCE
 	bool "Always use the default kernel command string"
 	help
