--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -17,6 +17,7 @@ package(
     ],
 )
 
+load("//build/bazel_common_rules/dist:dist.bzl", "copy_to_dist_dir")
 load("//build/kleaf:common_kernels.bzl", "aarch64_outs")
 load("//build/kleaf:kernel.bzl", "kernel_build", "kernel_modules_install")
 
@@ -221,5 +222,13 @@ kernel_modules_install(
         # "//private/google-modules/wlan/bcmdhd43752:bcmdhd43752.slider",
         # "//private/google-modules/wlan/bcmdhd4389:bcmdhd4389.slider",
         # "//private/google-modules/aoc/usb:usb.slider",
+    ],
+)
+
+copy_to_dist_dir(
+    name = "slider_dist",
+    data = [
+        ":slider_for_dist",
+        ":slider_modules_install",
     ],
 )
